--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 34
     buildToolsVersion "34.0.0"
     defaultConfig {
-        applicationId "com.coolweather.android"
+        applicationId "com.oldweatherapp.android"
         minSdkVersion 23
         targetSdkVersion 34
         versionCode 1
@@ -26,4 +26,11 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+
+    //第一次修改：添加库依赖【10】
+    implementation 'org.litepal.android:core:1.3.2'
+    implementation 'com.squareup.okhttp3:okhttp:3.4.1'
+    implementation 'com.google.code.gson:gson:2.7'
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
+
 }
